2023-07-05T16:12:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5466553959 # 979
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 23 5449
* notice: prev accum: outdated-unq outdated-all / unq all: 1467 134523 / 1520 140162
* notice: next accum: outdated-unq outdated-all / unq all: 1467 134523 / 1521 140302
* notice: prev exec diff / last date diff / accum: unq all: +1 +140 -0 -140 / +2 +272 -0 -0 / 2 272
* notice: removed / changed dates: [] / [2023-06-21 2023-07-05]

2023-07-05T08:12:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5461946341 # 978
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 23 5449
* notice: prev accum: outdated-unq outdated-all / unq all: 1467 134523 / 1519 140030
* notice: next accum: outdated-unq outdated-all / unq all: 1467 134523 / 1520 140162
* notice: prev exec diff / last date diff / accum: unq all: +1 +132 -1 -156 / +1 +132 -0 -0 / 1 132
* notice: removed / changed dates: [] / [2023-06-21 2023-07-05]

2023-07-05T00:54:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5459419281 # 977
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 23 5473
* notice: prev accum: outdated-unq outdated-all / unq all: 1464 134133 / 1519 139914
* notice: next accum: outdated-unq outdated-all / unq all: 1467 134523 / 1519 140030
* notice: prev exec diff / last date diff / accum: unq all: +0 +116 -0 -34 / +6 +399 -0 -0 / 6 399
* notice: removed / changed dates: [2023-06-20] / [2023-06-21 2023-07-04]

2023-07-04T16:11:29Z: