@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-06-23T00:52:55Z",
-  "count" : 393,
+  "timestamp" : "2023-07-06T00:55:06Z",
+  "count" : 359,
   "count_minmax" : [ 134, 393 ],
-  "count_decinc" : [ -0, +393 ],
+  "count_decinc" : [ -34, +393 ],
   "uniques" : 3,
   "uniques_minmax" : [ 2, 3 ],
   "uniques_decinc" : [ -0, +3 ]
