@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-05T16:12:02Z",
-  "count" : 272,
-  "count_minmax" : [ 132, 272 ],
-  "count_decinc" : [ -0, +272 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-07-06T00:55:06Z",
+  "count" : 442,
+  "count_minmax" : [ 132, 442 ],
+  "count_decinc" : [ -0, +442 ],
+  "uniques" : 15,
+  "uniques_minmax" : [ 1, 15 ],
+  "uniques_decinc" : [ -0, +15 ]
 }
