@@ -1,3 +1,12 @@
+2023-07-06T00:55:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5470389930 # 980
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
+* notice: last 14d: unq all: 32 5519
+* notice: prev accum: outdated-unq outdated-all / unq all: 1467 134523 / 1521 140302
+* notice: next accum: outdated-unq outdated-all / unq all: 1471 134919 / 1534 140472
+* notice: prev exec diff / last date diff / accum: unq all: +13 +170 -0 -34 / +15 +442 -0 -0 / 15 442
+* notice: removed / changed dates: [2023-06-21] / [2023-06-22 2023-07-05]
+
 2023-07-05T16:12:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5466553959 # 979
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
